# sport-events

./: .pre-commit-config.yaml  AI_Reflection.md  README.md
.dev/: docker-compose.yml
.github/workflows/: backend.yml  frontend.yml
backend/: .env.dist  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  openapi.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2202511081000_core_tables.py
backend/scripts/: seed_reference.py
backend/src/app/: main.py
backend/src/app/api/: __init__.py  router.py
backend/src/app/api/v1/endpoints/: __init__.py  events.py  health.py  sports.py  teams.py
backend/src/app/core/: config.py  logging.py
backend/src/app/db/: __init__.py  base.py  seeds.py  session.py
backend/src/app/models/: __init__.py  event.py  sport.py  team.py  venue.py
backend/src/app/repositories/: __init__.py  event.py  sport.py  team.py  venue.py
backend/src/app/schemas/: __init__.py  base.py  event.py  sport.py  team.py
backend/src/app/services/: __init__.py  event_filters.py  events.py  exceptions.py  sports.py  teams.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_event_workflow.py  test_events_api.py  test_health.py  test_migrations.py
backend/tests/unit/: test_event_filters.py  test_event_service.py  test_models.py
docs/: domain-model.md
frontend/: .prettierignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: events.ts  generated-schema.ts  http.ts  sports.ts  teams.ts
frontend/src/components/: AppLayout.tsx  EventFilters.test.tsx  EventFilters.tsx  EventForm.test.tsx  EventForm.tsx  EventList.test.tsx  EventList.tsx  PaginationControls.tsx
frontend/src/config/: env.ts
frontend/src/hooks/: useEvents.ts  useSports.ts  useTeams.ts
frontend/src/utils/: datetime.ts
