[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sports-events-backend"
version = "0.1.0"
description = "Backend service for the Sports Events platform built with FastAPI."
readme = "README.md"
requires-python = ">=3.12"
authors = [{name = "Shima Bayatifar"}]
license = "MIT"
keywords = ["fastapi", "sports", "events"]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "greenlet>=3.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-multipart>=0.0.9",
    "asyncpg>=0.29",
    "psycopg[binary,pool]>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "coverage[toml]>=7.4",
    "black>=24.2",
    "ruff>=0.3",
    "pre-commit>=3.8",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["app*"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
markers = [
  "integration: marks integration tests (deselect with '-m \"not integration\"')",
]

[tool.coverage.run]
branch = true
source = ["src/app"]
omit = [
    "*/tests/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80

[tool.black]
line-length = 120
target-version = ["py311"]
include = "\\.pyi?$"
exclude = '''
/(\n    \.git\n  | \.mypy_cache\n  | __pycache__\n  | build\n  | dist\n  | alembic\n)/
'''


[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "tests"]
exclude = ["alembic"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4"]
ignore = ["E203", "E266", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.isort]
known-first-party = ["app"]
